k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: sre-demo
  labels:
    app.kubernetes.io/managed-by: kubectl
    environment: production
