k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: sre-app
  namespace: sre-demo
  labels:
    app: sre-app
spec:
  selector:
    app: sre-app
  ports:
    - name: http
      port: 80
      targetPort: 5000
      protocol: TCP
  type: ClusterIP
