k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sre-app-ingress
  namespace: sre-demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "10"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
spec:
  ingressClassName: nginx
  rules:
    - host: sre-demo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sre-app
                port:
                  number: 80
